[gd_scene load_steps=2 format=3 uid="uid://by7tqp72mpn2f"]

[ext_resource type="Script" uid="uid://kctelgqtvonw" path="res://Menu/MScripts/MainMenu.gd" id="1_e1xpn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1xpn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -64.5
offset_right = 177.5
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Volume" type="Label" parent="SettingsPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
